[package]
name = "orml-xtokens"
description = "Cross-chain token transfer."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xtokens"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
log = { version = "0.4.20", default-features = false }
scale-info = { version = "2.9.0", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.136", optional = true }

# substrate
frame-support = { git = "https://github.com/gluwa/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0-patch" }
frame-system = { git = "https://github.com/gluwa/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0-patch" }
sp-io = { git = "https://github.com/gluwa/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0-patch" }
sp-runtime = { git = "https://github.com/gluwa/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0-patch" }
sp-std = { git = "https://github.com/gluwa/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0-patch" }

# cumulus
cumulus-primitives-core = { default-features = false, git = "https://github.com/gluwa/polkadot-sdk", branch = "release-polkadot-v1.1.0-patch" }

# polkadot
pallet-xcm = { git = "https://github.com/gluwa/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0-patch" }
xcm = { package = "staging-xcm", git = "https://github.com/gluwa/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0-patch" }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/gluwa/polkadot-sdk", default-features = false, branch = "release-polkadot-v1.1.0-patch" }

# orml
orml-traits = { path = "../traits", default-features = false }
orml-xcm-support = { path = "../xcm-support", default-features = false }

[dev-dependencies]
# substrate
pallet-balances = { git = "https://github.com/gluwa/polkadot-sdk", branch = "release-polkadot-v1.1.0-patch" }
sp-core = { git = "https://github.com/gluwa/polkadot-sdk", branch = "release-polkadot-v1.1.0-patch" }
pallet-message-queue = { git = "https://github.com/gluwa/polkadot-sdk", branch = "release-polkadot-v1.1.0-patch" }

# cumulus
cumulus-pallet-dmp-queue = { git = "https://github.com/gluwa/polkadot-sdk", branch = "release-polkadot-v1.1.0-patch" }
cumulus-pallet-xcm = { git = "https://github.com/gluwa/polkadot-sdk", branch = "release-polkadot-v1.1.0-patch" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/gluwa/polkadot-sdk", branch = "release-polkadot-v1.1.0-patch" }
cumulus-primitives-core = { git = "https://github.com/gluwa/polkadot-sdk", branch = "release-polkadot-v1.1.0-patch" }
parachain-info = { git = "https://github.com/gluwa/polkadot-sdk", branch = "release-polkadot-v1.1.0-patch" }

# polkadot
polkadot-parachain = { package = "polkadot-parachain-primitives", git = "https://github.com/gluwa/polkadot-sdk", branch = "release-polkadot-v1.1.0-patch" }
polkadot-runtime-parachains = { git = "https://github.com/gluwa/polkadot-sdk", branch = "release-polkadot-v1.1.0-patch" }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/gluwa/polkadot-sdk", branch = "release-polkadot-v1.1.0-patch" }
xcm-simulator = { git = "https://github.com/gluwa/polkadot-sdk", branch = "release-polkadot-v1.1.0-patch" }

# orml
orml-tokens = { path = "../tokens" }
orml-xcm = { path = "../xcm" }

[features]
default = ["std"]
std = [
	"serde",

	"codec/std",
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"orml-xcm-support/std",
	"pallet-xcm/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-executor/std",
	"xcm/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-xcm/try-runtime",
]
